project/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  namespace: hy-kube-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      volumes:
        - name: project-volume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: hy-kube-frontend
          image: IMAGE_FRONTEND
          resources:
            limits:
              cpu: "10m"
              memory: "30Mi"
          imagePullPolicy: Always
