project/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hy-kube-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: hy-kube-frontend
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 80
