project/frontend/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hy-kube-frontend-ingress
  namespace: hy-kube-project
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: hy-kube-frontend-svc
              servicePort: 2345
